--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,376 @@
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400..900&display=swap");
 @import "tailwindcss";
+@import "tw-animate-css";
+
+@custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --font-family: "Maven Pro", sans-serif;
+  --backgroundLight: #ffffff;
+  --backgroundDark: #121212;
+  --radius: 0.625rem;
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.145 0 0);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.145 0 0);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0);
+  --primary: oklch(0.205 0 0);
+  --primary-foreground: oklch(0.985 0 0);
+  --secondary: oklch(0.97 0 0);
+  --secondary-foreground: oklch(0.205 0 0);
+  --muted: oklch(0.97 0 0);
+  --muted-foreground: oklch(0.556 0 0);
+  --accent: oklch(0.97 0 0);
+  --accent-foreground: oklch(0.205 0 0);
+  --destructive: oklch(0.577 0.245 27.325);
+  --border: oklch(0.922 0 0);
+  --input: oklch(0.922 0 0);
+  --ring: oklch(0.708 0 0);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar-primary: oklch(0.205 0 0);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.97 0 0);
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-ring: oklch(0.708 0 0);
 }
 
 @theme inline {
+  --font-family: "Maven Pro", sans-serif;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar: var(--sidebar);
+  --color-chart-5: var(--chart-5);
+  --color-chart-4: var(--chart-4);
+  --color-chart-3: var(--chart-3);
+  --color-chart-2: var(--chart-2);
+  --color-chart-1: var(--chart-1);
+  --color-ring: var(--ring);
+  --color-input: var(--input);
+  --color-border: var(--border);
+  --color-destructive: var(--destructive);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-accent: var(--accent);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-muted: var(--muted);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-secondary: var(--secondary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-primary: var(--primary);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-popover: var(--popover);
+  --color-card-foreground: var(--card-foreground);
+  --color-card: var(--card);
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Maven Pro", sans-serif;
+  transition: background-color 0.4s ease, color 0.4s ease;
+}
+
+body.light {
+  background-color: var(--backgroundLight);
+  color: black;
+}
+
+/* Dark theme */
+body.dark {
+  background-color: var(--backgroundDark);
+  color: #e0e0e0;
+}
+
+.dark {
+  --background: oklch(0.145 0 0);
+  --foreground: oklch(0.985 0 0);
+  --card: oklch(0.205 0 0);
+  --card-foreground: oklch(0.985 0 0);
+  --popover: oklch(0.205 0 0);
+  --popover-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.922 0 0);
+  --primary-foreground: oklch(0.205 0 0);
+  --secondary: oklch(0.269 0 0);
+  --secondary-foreground: oklch(0.985 0 0);
+  --muted: oklch(0.269 0 0);
+  --muted-foreground: oklch(0.708 0 0);
+  --accent: oklch(0.269 0 0);
+  --accent-foreground: oklch(0.985 0 0);
+  --destructive: oklch(0.704 0.191 22.216);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 15%);
+  --ring: oklch(0.556 0 0);
+  --chart-1: oklch(0.488 0.243 264.376);
+  --chart-2: oklch(0.696 0.17 162.48);
+  --chart-3: oklch(0.769 0.188 70.08);
+  --chart-4: oklch(0.627 0.265 303.9);
+  --chart-5: oklch(0.645 0.246 16.439);
+  --sidebar: oklch(0.205 0 0);
+  --sidebar-foreground: oklch(0.985 0 0);
+  --sidebar-primary: oklch(17.321% 0.01092 268.066);
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.269 0 0);
+  --sidebar-accent-foreground: oklch(0.985 0 0);
+  --sidebar-border: oklch(1 0 0 / 10%);
+  --sidebar-ring: oklch(0.556 0 0);
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+.scroll-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100%;
+  overflow: hidden;
+}
+
+.arrow {
+  font-size: 48px;
+  color: #007bff;
+  animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
+}
+
+.projectImg {
+  object-fit: cover;
+  -webkit-box-reflect: below 2px
+    linear-gradient(transparent, transparent, #0004);
+  transform-origin: center;
+  transform: perspective(800px) rotateY(25deg);
+  transition: 0.5s;
+}
+
+.project-container {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-container .card {
+  position: relative;
+  cursor: pointer;
+}
+
+.project-container .card .face {
+  width: 300px;
+  height: 200px;
+  transition: 0.5s;
+}
+.project-container .card .face {
+  width: 100%;
+  max-width: 300px;
+  height: 200px;
+  transition: 0.5s;
+}
+
+@media (min-width: 768px) {
+  .project-container .card .face {
+    max-width: 280px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .project-container .card .face {
+    max-width: 320px;
+  }
+}
+
+.project-container .card .face.face1 {
+  position: relative;
+  background: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  transform: translateY(100px);
+}
+
+.project-container .card:hover .face.face1 {
+  background: #ff0057;
+  transform: translateY(0);
+}
+
+.project-container .card .face.face1 .content {
+  opacity: 1;
+  transition: 0.5s;
+}
+
+.project-container .card:hover .face.face1 .content {
+  opacity: 1;
+}
+
+.project-container .card .face.face1 .content img {
+  max-width: 100px;
+}
+
+.project-container .card .face.face1 .content h3 {
+  margin: 10px 0 0;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.project-container .card .face.face2 {
+  position: relative;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+  transform: translateY(-100px);
+}
+
+.project-container .card:hover .face.face2 {
+  transform: translateY(0);
+}
+
+.project-container .card .face.face2 .content p {
+  margin: 0;
+  padding: 0;
+  color: #000;
+}
+
+.project-container .card .face.face2 .content .anchor {
+  margin: 15px 0 0;
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: #333;
+  padding: 5px;
+  border: 1px solid #333;
+}
+
+.project-container .card .face.face2 .content .anchor:hover {
+  background: #333;
+  color: #fff;
+}
+
+.scroll-cards {
+  counter-reset: card;
+  position: relative;
+  display: block;
+  padding-bottom: 43vh;
+  justify-items: center;
+}
+
+.scroll-cards > .scroll-cards__item + .scroll-cards__item {
+  margin-top: 40vh;
+}
+
+.scroll-cards h1 {
+  position: sticky;
+  top: 2rem;
+  margin: 0 0 1em;
+}
+
+.scroll-cards__item {
+  --offset: 0.5em;
+  position: sticky;
+  top: max(16vh, 10em);
+  padding: 2em 1.5em;
+  min-height: 19em;
+  color: #f5f5f5;
+  background: linear-gradient(
+    90deg,
+    rgba(53, 92, 125, 1) 0%,
+    rgba(108, 91, 123, 1) 50%,
+    rgba(192, 108, 132, 1) 100%
+  );
+  box-shadow: 0 2px 40px #0000007a;
+  width: calc(100% - 5 * var(--offset));
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.scroll-cards__item:nth-of-type(0) {
+  transform: translate(
+    calc((0 - 1) * var(--offset)),
+    calc((0 - 1) * var(--offset))
+  );
+}
+.scroll-cards__item:nth-of-type(1) {
+  transform: translate(
+    calc((1 - 1) * var(--offset)),
+    calc((1 - 1) * var(--offset))
+  );
+}
+.scroll-cards__item:nth-of-type(2) {
+  transform: translate(
+    calc((2 - 1) * var(--offset)),
+    calc((2 - 1) * var(--offset))
+  );
+}
+.scroll-cards__item:nth-of-type(3) {
+  transform: translate(
+    calc((3 - 1) * var(--offset)),
+    calc((3 - 1) * var(--offset))
+  );
+}
+.scroll-cards__item:nth-of-type(4) {
+  transform: translate(
+    calc((4 - 1) * var(--offset)),
+    calc((4 - 1) * var(--offset))
+  );
+}
+
+@media screen and (min-width: 37em) {
+  .scroll-cards__item {
+    --offset: 1em;
+    /* padding-left: 5em; */
+  }
+}
+
+@media screen and (min-width: 62em) {
+  .scroll-cards__item {
+    --offset: 1.25em;
+    max-width: 42em;
+  }
 }
